--- a/notebooks/datahacks-notebook.ipynb
+++ b/notebooks/datahacks-notebook.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6141446d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0593ffe7",
    "metadata": {},
    "source": [
     "# Intro\n",
@@ -24,9 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b576a3d3",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: plotly in c:\\users\\jonat\\anaconda3\\lib\\site-packages (5.7.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\jonat\\anaconda3\\lib\\site-packages (from plotly) (8.0.1)\n",
+      "Requirement already satisfied: six in c:\\users\\jonat\\anaconda3\\lib\\site-packages (from plotly) (1.15.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -37,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a48c0bc",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dc26e6cf",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +206,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce17d90c",
    "metadata": {},
    "source": [
     "# EDA\n",
@@ -201,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bdb02f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,7 +223,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4095ad79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc47992",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -225,14 +237,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "192d7d4b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fc912699",
    "metadata": {},
    "source": [
     "# Feature Engineering\n",
@@ -243,7 +253,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0173df9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd0f41c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -259,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd48a31f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,7 +274,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da07e7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -275,14 +281,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abd413fc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "07bff4c7",
    "metadata": {},
    "source": [
     "# Model Building\n",
@@ -293,7 +297,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa874921",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -301,7 +304,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6660e1c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -309,7 +311,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b30ceedd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -317,14 +318,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e934f96a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ad2efbef",
    "metadata": {},
    "source": [
     "# Model Testing\n",
@@ -335,7 +334,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce6adff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +341,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7f4289b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -351,7 +348,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b571619",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -359,21 +355,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
   }
  },
  "nbformat": 4,
